Do web writing on the Menu section

--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
                 </div>
             </section>
 
+            
         <!-- the food preview section ends  -->
 
         <!-- the gallery section starts -->
@@ -315,25 +316,25 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide slide" data-name="dish1">
                         <img src="images/dish9.jpg" alt="">
-                        <h3 class="price">100 000 ₽</h3>
+                        <h3 class="price">100 000 p</h3>
                         <h5>Basic Package</h5>
                     </div>
 
                     <div class="swiper-slide slide" data-name="dish2">
                         <img src="images/dish4.jpg" alt="">
-                        <h3 class="price">110 000 ₽</h3>
+                        <h3 class="price">110 000 p</h3>
                         <h5>Average Package</h5>
                     </div>
 
                     <div class="swiper-slide slide" data-name="dish3">
                         <img src="images/dish6.jpg" alt="">
-                        <h3 class="price">120 000 ₽</h3>
+                        <h3 class="price">120 000 p</h3>
                         <h5>Full Package</h5>
                     </div>
 
                     <div class="swiper-slide slide" data-name="dish4">
                         <img src="images/about.jpg" alt="">
-                        <h3 class="price">130 000 ₽</h3>
+                        <h3 class="price">130 000 p</h3>
                         <h5>Elite Package</h5>
                     </div>
                 </div>
@@ -356,58 +357,6 @@
                 <div class="swiper menu-slider">
                     <div class="swiper-wrapper">
 
-                        <!-- the slider for displaying the breakfast menu -->
-                        <div class="swiper-slide slide card">
-                            <h3 class="title">breakfast</h3>
-                            <div class="box-container">
-                                <div class="box">
-                                    <div class="info">
-                                        <h3>Delicious breakfast</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
-                                    </div>
-                                    <div class="price">600p</div>
-                                </div>
-                                <div class="box">
-                                    <div class="info">
-                                        <h3>Delicious breakfast</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
-                                    </div>
-                                    <div class="price">600p</div>
-                                </div>
-                                <div class="box">
-                                    <div class="info">
-                                        <h3>Delicious breakfast</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
-                                    </div>
-                                    <div class="price">600p</div>
-                                </div>
-                                <div class="box">
-                                    <div class="info">
-                                        <h3>Delicious breakfast</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
-                                    </div>
-                                    <div class="price">600p</div>
-                                </div>
-                                <div class="box">
-                                    <div class="info">
-                                        <h3>Delicious breakfast</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
-                                    </div>
-                                    <div class="price">600p</div>
-                                </div>
-                                <div class="box">
-                                    <div class="info">
-                                        <h3>Delicious breakfast</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
-                                    </div>
-                                    <div class="price">600p</div>
-                                </div>
-                            </div>
-                        </div>
-
-
-
-
                         <!-- the slider for displaying the lunch menu -->
                         <div class="swiper-slide slide card">
                             <h3 class="title">Lunch</h3>
@@ -417,35 +366,35 @@
                                         <h3>Delicious lunch</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">200p</div>
                                 </div>
                                 <div class="box">
                                     <div class="info">
                                         <h3>Delicious lunch</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">250p</div>
                                 </div>
                                 <div class="box">
                                     <div class="info">
                                         <h3>Delicious lunch</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">350p</div>
                                 </div>
                                 <div class="box">
                                     <div class="info">
                                         <h3>Delicious lunch</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">400p</div>
                                 </div>
                                 <div class="box">
                                     <div class="info">
                                         <h3>Delicious lunch</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">450p</div>
                                 </div>
                             </div>
                         </div>
@@ -463,7 +412,14 @@
                                         <h3>Delicious dinner</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">500p</div>
+                                </div>
+                                <div class="box">
+                                    <div class="info">
+                                        <h3>Delicious dinner</h3>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                                    </div>
+                                    <div class="price">550p</div>
                                 </div>
                                 <div class="box">
                                     <div class="info">
@@ -477,28 +433,21 @@
                                         <h3>Delicious dinner</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">650p</div>
                                 </div>
                                 <div class="box">
                                     <div class="info">
                                         <h3>Delicious dinner</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">700p</div>
                                 </div>
                                 <div class="box">
                                     <div class="info">
                                         <h3>Delicious dinner</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
-                                </div>
-                                <div class="box">
-                                    <div class="info">
-                                        <h3>Delicious dinner</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
-                                    </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">750p</div>
                                 </div>
                             </div>
                         </div>
@@ -514,38 +463,38 @@
                             <div class="box-container">
                                 <div class="box">
                                     <div class="info">
-                                        <h3>Cold drinks</h3>
+                                        <h3>Wine Small</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">250p</div>
                                 </div>
                                 <div class="box">
                                     <div class="info">
-                                        <h3>Cold drinks</h3>
+                                        <h3>Wine Big</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">300p</div>
                                 </div>
                                 <div class="box">
                                     <div class="info">
-                                        <h3>Cold drinks</h3>
+                                        <h3>Moss</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">150p</div>
                                 </div>
                                 <div class="box">
                                     <div class="info">
-                                        <h3>Cold drinks</h3>
+                                        <h3>Juice small</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>  
-                                    <div class="price">600p</div>
+                                    <div class="price">100p</div>
                                 </div>
                                 <div class="box">
                                     <div class="info">
-                                        <h3>Cold drinks</h3>
+                                        <h3>Juice Big</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">150p</div>
                                 </div>
                             </div>
                         </div>
@@ -559,31 +508,31 @@
                             <div class="box-container">
                                 <div class="box">
                                     <div class="info">
-                                        <h3>Cold drinks</h3>
+                                        <h3>Cake</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">200p</div>
                                 </div>
                                 <div class="box">
                                     <div class="info">
-                                        <h3>Sweet desserts</h3>
+                                        <h3>Cup Cake</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">250p</div>
                                 </div>
                                 <div class="box">
                                     <div class="info">
-                                        <h3>Sweet desserts</h3>
+                                        <h3>Chocolate Cake</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">300p</div>
                                 </div>
                                 <div class="box">
                                     <div class="info">
-                                        <h3>Sweet desserts</h3>
+                                        <h3>Vanilla Cake</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
                                     </div>
-                                    <div class="price">600p</div>
+                                    <div class="price">300p</div>
                                 </div>
                             </div>
                         </div>
