change the link on the ingstagram icon to the restaurant's

--- a/index.html
+++ b/index.html
@@ -100,11 +100,7 @@
 
         </section>
 
-
         <!-- end of the home section  -->
-
-
-
 
         <!-- start of the about section  -->
 
@@ -884,7 +880,7 @@
 
                 <div class="share card">
                     <a href="https://vk.com/bravolaudes" class="fab fa-vk" target="_blank"></a>
-                    <a href="https://www.instagram.com/peter_m_m/" class="fab fa-instagram" target="_blank"></a>
+                    <a href="https://www.instagram.com/bravo_laudes_banket_spb_ru/" class="fab fa-instagram" target="_blank"></a>
                     <a href="https://wa.me/message/3U27COCOMNUBC1" class="fab fa-whatsapp" target="_blank"></a>
                 </div>
 
