change the font on the footer items

--- a/index.html
+++ b/index.html
@@ -853,27 +853,27 @@
                 <div class="icons-container card">
                     <div class="icons">
                         <i class="fas fa-clock"></i>
-                        <h3>Opening hours</h3>
+                        <h3>Время работы</h3>
                         <p>11.00 - 21:00</p>
                     </div>
 
                     <div class="icons">
                         <i class="fas fa-phone"></i>
-                        <h3>Phone</h3>
-                        <p>+7 921 954 8535</p>
-                        <p>+7 900 462 4784</p>
+                        <h3>Телефон</h3>
+                        <p>+7 (921) 954 85-35</p>
+                        <p>+7 (812) 502-74-54</p>
                     </div>
 
                     <div class="icons">
                         <i class="fas fa-envelope"></i>
-                        <h3>Email</h3>
-                        <p>laudes@mail.ru</p>
-                        <p>chukudim@mail.ru</p>
+                        <h3>Почта</h3>
+                        <p>bravolaudes@gmail.com</p>
+                        <p>laudes101998@gmail.com</p>
                     </div>
 
                     <div class="icons">
                         <i class="fas fa-map"></i>
-                        <h3>Address</h3>
+                        <h3>Адрес</h3>
                         <p>Санкт-Петербург, Разъезжая ул. 3</p>
                     </div>
                 </div>
