--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
                 <a href="#contact">Contact Us</a>
             </nav>
 
+            <a href="tel:+79219548535" class="cta"></a>
 
-            <div id="menu-btn" class="fas fa-bars"></div>
+
+            <a id="menu-btn" class="fas fa-bars"></a>
 
         </section>
 
