Add the SEO meta tags

--- a/index.html
+++ b/index.html
@@ -3,21 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laudes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+
+
+    <meta name="format-detection" content="telephone=no">
+
+    <!-- a short description about the page  -->
+    <meta name="description" content="With almost 25 years of experience, we offer banquets for 
+    any kind of celebrations, weddings, memorial services, birthday celebrations">
+
+    <!-- keywords of the page  (they should not be more than 20 words)-->
+    <meta name="keywords" content="banquet, restaurant, banquet restaurant, wedding, lunch, business 
+    lunch, dinner, dessert, food, eat, drink">
+
+    <!-- for the search robots to be blocked  -->
+    <meta name="robots" content="none">
+
+
+    <meta name="Author" content="Laudes banquet Hall">
+
+    <meta name="Copyright" content="© Лаудес Банкетный Ресторан">
+
+    <meta name="Address" content="Санкт-Петербург, Разъезжая улица 3">
+
+
+
+
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
-    
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
 
     <!-- this is the link for the light gallery taht we used on the gallery  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.6.0/css/lightgallery.min.css">
-
     <link rel="stylesheet" href="styles.css">
-
-
+    <title>Laudes</title>
 </head>
 <body>
 
