Change the background color

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
 
-    <!-- this is the link for the light gallery taht we used on the gallery  -->
+    <!-- this is the link for the light gallery that we used on the gallery  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.6.0/css/lightgallery.min.css">
     <link rel="stylesheet" href="styles.css">
     <title>Laudes</title>
