--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- this is the link for the light gallery that we used on the gallery  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.6.0/css/lightgallery.min.css">
     <link rel="stylesheet" href="styles.css">
-    <title>Laudes</title>
+    <title>Duke</title>
 </head>
 <body>
 
@@ -52,7 +52,7 @@
         <section class="header">
 
 
-            <a href="index.html" class="logo"> Laudes </a>
+            <a href="index.html" class="logo"> Duke </a>
 
 
             <nav class="navbar">
@@ -66,7 +66,7 @@
                 <a href="#contact">Contact Us</a>
             </nav>
 
-            <a href="tel:+79219548535" class="cta"></a>
+            <!-- <a href="tel:+79219548535" class="cta"></a> -->
 
 
             <a id="menu-btn" class="fas fa-bars"></a>
@@ -84,33 +84,33 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide slide" style="background: url(images/hall1.jpg) no-repeat;">
                         <div class="content">
-                            <h3>Laudes banquet Hall</h3>
-                            <h4>+7 921 954 8535</h4>
-                            <h5>+7 900 462 4784</h5>
+                            <h3>Duke Banquet Hall</h3>
+                            <h4>+7 009 123 8556</h4>
+                            <h5>+7 999 765 2347</h5>
                         </div>
                     </div>
 
                     <div class="swiper-slide slide" style="background: url(images/hall2.jpg) no-repeat;">
                         <div class="content">
-                            <h3>Laudes banquet Hall</h3>
-                            <h4>+7 921 954 8535</h4>
-                            <h5>+7 900 462 4784</h5>
+                            <h3>Duke Banquet Hall</h3>
+                            <h4>+7 009 123 8556</h4>
+                            <h5>+7 999 765 2347</h5>
                         </div>
                     </div>
 
                     <div class="swiper-slide slide" style="background: url(images/hall5.jpg) no-repeat;">
                         <div class="content">
-                            <h3>Laudes banquet Hall</h3>
-                            <h4>+7 921 954 8535</h4>
-                            <h5>+7 900 462 4784</h5>
+                            <h3>Duke Banquet Hall</h3>
+                            <h4>+7 009 123 8556</h4>
+                            <h5>+7 999 765 2347</h5>
                         </div>
                     </div>
 
                     <div class="swiper-slide slide" style="background: url(images/hall4.jpg) no-repeat;">
                         <div class="content">
-                            <h3>Laudes banquet Hall</h3>
-                            <h4>+7 921 954 8535</h4>
-                            <h5>+7 900 462 4784</h5>
+                            <h3>Duke Banquet Hall</h3>
+                            <h4>+7 009 123 8556</h4>
+                            <h5>+7 999 765 2347</h5>
                         </div>
                     </div>
                 </div>
