--- a/index.html
+++ b/index.html
@@ -829,21 +829,20 @@
                     <div class="icons">
                         <i class="fas fa-phone"></i>
                         <h3>Телефон</h3>
-                        <p>+7 (921) 954 85-35</p>
-                        <p>+7 (812) 502-74-54</p>
+                        <p>+7 (951) 900 78-34</p>
+                        <p>+7 (811) 345-55-00</p>
                     </div>
 
                     <div class="icons">
                         <i class="fas fa-envelope"></i>
                         <h3>Почта</h3>
-                        <p>bravolaudes@gmail.com</p>
-                        <p>laudes101998@gmail.com</p>
+                        <p>info@duke@.com</p>
                     </div>
 
                     <div class="icons">
                         <i class="fas fa-map"></i>
                         <h3>Адрес</h3>
-                        <p>Санкт-Петербург, Разъезжая ул. 3</p>
+                        <p>Санкт-Петербург</p>
                     </div>
                 </div>
 
@@ -853,7 +852,7 @@
                     <a href="https://wa.me/message/3U27COCOMNUBC1" class="fab fa-whatsapp" target="_blank"></a>
                 </div>
 
-                <div class="credit card">All rights reserved. Laudes 2022</div>
+                <div class="credit card">All rights reserved. Duke 2022</div>
                 <div class="powered card">Powered by <a href="https://www.instagram.com/rockie_tech/" target="_blank"><strong>Rockie Tech</strong></a></div>
 
             </section>
